<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_title"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_Name"
        android:id="@+id/txtName"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_Email"
        android:id="@+id/txtEmail"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_Telefono"
        android:id="@+id/txtTelefono"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_title_sexo"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lblMasculino"
            >
            </RadioButton>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lblFemenino"
            >

        </RadioButton>
    </RadioGroup>
    <Button
        android:id="@+id/btnVerToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mostrar Mensaje"
        android:onClick="mesnajeToast"
        android:textColor="@color/icons"
        android:background="@color/colorPrimaryDark"
        />

</LinearLayout>
